Create new JsTsContext